[gd_scene load_steps=8 format=3 uid="uid://bke7ht6hwx7em"]

[ext_resource type="Script" path="res://Scripts/space_ship.gd" id="1_cgh3a"]
[ext_resource type="PackedScene" uid="uid://3gwsjb0lgeo" path="res://Scenes/engine-stream.tscn" id="2_nawi5"]
[ext_resource type="Texture2D" uid="uid://cj67mg0r7dye3" path="res://Textures/Spaceship.png" id="3_bg2ua"]
[ext_resource type="Texture2D" uid="uid://bc81bnmvnps7x" path="res://Textures/explosion-part.png" id="4_ipmgs"]
[ext_resource type="AudioStream" uid="uid://d321pmavxilib" path="res://Audio/ship-explodes.wav" id="5_dqydu"]
[ext_resource type="AudioStream" uid="uid://doxkwsxydoe0m" path="res://Audio/pew-pew.wav" id="6_8nejh"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q1cqy"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 44.06
direction = Vector3(1, 2.08165e-12, 2.08165e-12)
spread = 180.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 558.17
radial_velocity_min = -2.23517e-05
radial_velocity_max = 197.25
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
linear_accel_min = 46.1
linear_accel_max = 100.0
radial_accel_min = 30.05
radial_accel_max = 30.05
scale_max = 3.0

[node name="SpaceShip" type="CharacterBody2D" groups=["PlayerShip"]]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_cgh3a")

[node name="LeftEngineStream" parent="." instance=ExtResource("2_nawi5")]
position = Vector2(-60, 90)
emitting = false

[node name="RightEngineStream" parent="." instance=ExtResource("2_nawi5")]
position = Vector2(58, 92)
emitting = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_bg2ua")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(35, -15, 0, -86, -34, -15, -80, 30, -81, 79, -36, 79, -1, 43, 37, 79, 81, 79, 81, 27)

[node name="Explosion" type="GPUParticles2D" parent="."]
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_q1cqy")
texture = ExtResource("4_ipmgs")
lifetime = 0.5
one_shot = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dqydu")
volume_db = -15.0
pitch_scale = 0.75

[node name="PewPewSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8nejh")
volume_db = -10.0

[node name="GunMarker" type="Marker2D" parent="."]
position = Vector2(-4.1633e-12, -96)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="finished" from="Explosion" to="." method="_on_explosion_finished"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
